--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnakesegment.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnakesegment.monstertype.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "水色球蛇的躯体片段",
-      "Eng": "A segment of a aqua sphere snake"
+      "Eng": "A segment of an aqua sphere snake."
     }
   }
 ]
