--- a/translations/texts/objects/crafting/matterassembler/shared_prototyper.json
+++ b/translations/texts/objects/crafting/matterassembler/shared_prototyper.json
@@ -40,8 +40,7 @@
       ]
     },
     "Texts": {
-      "Chs": "制造更复杂的设备",
-      "Eng": "Create more complicated gear"
+      "Eng": "Create more complicated gear."
     }
   },
   {
