--- a/translations/texts/objects/farmables/eggs/poptopegg/poptopegg.object.json
+++ b/translations/texts/objects/farmables/eggs/poptopegg/poptopegg.object.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "可以孵化出一个可爱的毛绒绒的肉食动物。",
-      "Eng": "Hatches into a adorable floofy carnivore."
+      "Eng": "Hatches into an adorable floofy carnivore."
     }
   },
   {
