--- a/translations/texts/objects/mission/mining/minecrusher/cmineduct.object.json
+++ b/translations/texts/objects/mission/mining/minecrusher/cmineduct.object.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "用于下降岩石的管道。",
-      "Eng": "A duct used for down rocks."
+      "Eng": "A duct used for transporting rocks."
     }
   },
   {
