--- a/translations/texts/objects/mission/mining/minefence/minefence.object.json
+++ b/translations/texts/objects/mission/mining/minefence/minefence.object.json
@@ -19,8 +19,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一道有红色和黑色警告条纹的金属围栏。",
-      "Eng": "A metal fence with red and black warning stripes."
+      "Eng": "A metal fence with black and yellow warning stripes."
     }
   },
   {
@@ -31,8 +30,7 @@
       ]
     },
     "Texts": {
-      "Chs": "一道涂有红黑条纹的金属栏杆。",
-      "Eng": "A metal railing painted with red and black stripes."
+      "Eng": "A metal railing painted with black and yellow stripes."
     }
   },
   {
