--- a/translations/texts/stats/effects/fu_effects/madness/madnessloss4.statuseffect.json
+++ b/translations/texts/stats/effects/fu_effects/madness/madnessloss4.statuseffect.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "精神病治疗——降低80%精神错乱的风险。",
-      "Eng": "Psychiatric Help - 80% Reduced risk of Madness effects."
+      "Eng": "Psychiatric Help - 80% Reduced risk of Madness effects. Passively reduce Madness."
     }
   }
 ]
