--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnake.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnake.monstertype.json
@@ -7,8 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "水色球蛇的头部",
-      "Eng": "The head of a aqua sphere snake"
+      "Eng": "The head of an aqua sphere snake."
     }
   }
 ]
