--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/shared_.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/shared_.monstertype.json
@@ -10,8 +10,7 @@
       ]
     },
     "Texts": {
-      "Chs": "由水溶性球体组成的蛇形组织",
-      "Eng": "A snake-like construct composed of aqua distortion spheres"
+      "Eng": "A snake-like construct composed of aqua distortion spheres."
     }
   }
 ]
