--- a/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedcrackerbox.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedcrackerbox.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A small box of bread-based crackers. Crumbly and bland as hell. The salt content leaves something to be desired. And trying to use these as individual crackers seems futile as they'd just fall apart in your grasp. Best to just grind it into a powder and wash it down quickly with some kind of drink before you gag on what feels like edible sand. The profound taste of disappointment is probably why someone left these behind in the first place. Maybe you should too...\nType: Universal"
+      "Eng": "A small box of bread-based crackers. Crumbly and bland as hell. The salt content leaves something to be desired. And trying to use these as individual crackers seems futile as they'd just fall apart in your grasp. Best to just grind it into a powder and wash it down quickly with some kind of drink before you gag on what feels like edible sand. The profound taste of disappointment is probably why someone left these behind in the first place. Maybe you should too...\nType: Universal",
+      "Chs": "一小盒面包饼干。像地狱一样粗糙和乏味。盐的含量还有待提高。试图将这些作为单独的饼干使用似乎是徒劳的，因为它们会在你的手中分崩离析。最好把它磨成粉末，用某种饮料快速冲洗干净，然后再咽下感觉像可食用沙子的东西。失望的深刻味道可能是为什么有人一开始就把这些抛在了后面。也许你也应该。。。\n类型：通用"
     }
   }
 ]
