--- a/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedsmallchips.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedsmallchips.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "How come nobody puts these in vending machines anymore? Probably because of the negligible nutritional value. And because these have already been crushed and reduced to a fine powder. Man, if only there were a way to put air in the bag to give it some cushioning or something.\nType: Universal"
+      "Eng": "How come nobody puts these in vending machines anymore? Probably because of the negligible nutritional value. And because these have already been crushed and reduced to a fine powder. Man, if only there were a way to put air in the bag to give it some cushioning or something.\nType: Universal",
+      "Chs": "为什么没有人再把这些放在自动售货机里了？可能是因为营养价值微不足道。因为这些已经被粉碎并还原成细粉。伙计，要是有办法把空气放进袋子里，给它一些缓冲什么的就好了。\n类型：通用"
     }
   }
 ]
