--- a/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedyeastcubes.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedyeastcubes.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yeast Cubes neatly packed into plastic packaging. An extreme source of protein and great for the rock-rat or belter on a budget. Under most jurisdictions, yeast cubes are effectively free and costs are only to cover the packaging. A valuable food, if you can handle the taste.\n^green;Type: Herbivore^reset;"
+      "Eng": "Yeast Cubes neatly packed into plastic packaging. An extreme source of protein and great for the rock-rat or belter on a budget. Under most jurisdictions, yeast cubes are effectively free and costs are only to cover the packaging. A valuable food, if you can handle the taste.\n^green;Type: Herbivore^reset;",
+      "Chs": "酵母块整齐地包装在塑料包装中。蛋白质的极端来源，非常适合预算有限的摇滚乐爱好者。在大多数司法管辖区，酵母块实际上是免费的，成本仅涵盖包装费用。如果你能品尝的话，这是一种很有价值的食物。\n ^green;类型：素食^reset;"
     }
   }
 ]
