--- a/translations/patches/items/FOODS/CIVILIAN/gic_cheesesandwich.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_cheesesandwich.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Two pieces of bread violently assaulting cheese. A solid foundation for most commercial ''food-porn'', as you can see the cheese ooze out between whatever abusively oppresses it. While that usually involves the layers of a burger, toasted or pan fried buns are sufficient to create the same effect. Unlike commercial ''food-porn'', there is a level of simplicity here that allows it to actually taste as good as it looks, for once.\n^orange;Type: Dairy^reset;"
+      "Eng": "Two pieces of bread violently assaulting cheese. A solid foundation for most commercial ''food-porn'', as you can see the cheese ooze out between whatever abusively oppresses it. While that usually involves the layers of a burger, toasted or pan fried buns are sufficient to create the same effect. Unlike commercial ''food-porn'', there is a level of simplicity here that allows it to actually taste as good as it looks, for once.\n^orange;Type: Dairy^reset;",
+      "Chs": "两片面包猛烈地冲击着奶酪。这是大多数商业“食品馅饼”的坚实基础，正如你所看到的，奶酪在任何虐待它的东西之间渗出。虽然这通常涉及汉堡的层次，但烤面包或煎面包足以产生同样的效果。与商业“食品角”不同，这里有一种简单的程度，可以让它尝起来和看起来一样好。\n ^orange;类型：乳制品^reset;"
     }
   }
 ]
