--- a/translations/patches/items/FOODS/CIVILIAN/gic_fullburritopack.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_fullburritopack.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Multiple tortilla rolls of ground meat, cheese, and maybe beans. Microwaving or baking is recommended. But after enough time in your pocket, you can probably just slide them all in your mouth and down your throat in one go, like the dirty burrito gobbler you are.^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy"
+      "Eng": "Multiple tortilla rolls of ground meat, cheese, and maybe beans. Microwaving or baking is recommended. But after enough time in your pocket, you can probably just slide them all in your mouth and down your throat in one go, like the dirty burrito gobbler you are.^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy",
+      "Chs": "多卷玉米饼，里面有绞肉、奶酪，也许还有豆子。建议微波炉或烘烤。但在口袋里放了足够长的时间后，你可能就可以把它们都塞进嘴里，一次塞进喉咙，就像你吃的脏玉米煎饼一样^orange;类型：熟肉^reset;^green;素食^reset;奶制品"
     }
   }
 ]
