--- a/translations/patches/items/FOODS/CIVILIAN/gic_meatburger.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_meatburger.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bread. Pickles. Onion. Lettuce. Nondescript meat analogue. Ketchup. Bread. It's a staple classic of humanity's unhealthiness. There are other burgers out there. But this one is special. Maybe.\n^orange;Type: Cooked Meat + Vegetables^reset;"
+      "Eng": "Bread. Pickles. Onion. Lettuce. Nondescript meat analogue. Ketchup. Bread. It's a staple classic of humanity's unhealthiness. There are other burgers out there. But this one is special. Maybe.\n^orange;Type: Cooked Meat + Vegetables^reset;",
+      "Chs": "面包。泡菜。洋葱。生菜。非描述性肉类类似物。番茄酱。面包。这是人类不健康的典型代表。外面还有其他汉堡。但这个很特别。也许 吧。\n ^orange;类型：熟肉+蔬菜^reset;"
     }
   }
 ]
