--- a/translations/patches/items/FOODS/CIVILIAN/gic_microwaveburrito.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_microwaveburrito.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Take a good look at what's inside after you take a bite, because chances are, it's going to look exactly the same when it comes out. What? What do you mean you've never defecated in your entire life? Hopefully, this'll fix that.\n^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy"
+      "Eng": "Take a good look at what's inside after you take a bite, because chances are, it's going to look exactly the same when it comes out. What? What do you mean you've never defecated in your entire life? Hopefully, this'll fix that.\n^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy",
+      "Chs": "咬一口后，仔细看看里面是什么，因为很可能，它出来时看起来完全一样。什么？你是什么意思，你一辈子都没排便过？希望这能解决这个问题。\n ^orange;类型：熟肉^reset;^green;素食^reset;奶制品"
     }
   }
 ]
