--- a/translations/patches/items/FOODS/CIVILIAN/gic_pearljamsandwich.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_pearljamsandwich.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Two pieces of bread encasing a red, salty paste. Utterly unrelated to the venerable band and their hit song, Do The Evolution. Indeed, the name is misleading: pearlpeas are still peas, so this is actually more like a hummus sandwich. But it still looks like jam, so...\n^green;Type: Herbivore^reset;"
+      "Eng": "Two pieces of bread encasing a red, salty paste. Utterly unrelated to the venerable band and their hit song, Do The Evolution. Indeed, the name is misleading: pearlpeas are still peas, so this is actually more like a hummus sandwich. But it still looks like jam, so...\n^green;Type: Herbivore^reset;",
+      "Chs": "两片面包包裹着红色的咸味糊状物。与这支受人尊敬的乐队及其热门歌曲《进化》完全无关。事实上，这个名字具有误导性：豌豆仍然是豌豆，所以这实际上更像是鹰嘴豆泥三明治。但它看起来还是像果酱，所以…\n ^green;类型：素食^reset;"
     }
   }
 ]
