--- a/translations/patches/items/FOODS/RATIONS/COLONY/gic_cifr.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/COLONY/gic_cifr.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "An outdated Ration tailored for individual daily consumption. A leftover from the glory days of USCM-backed colonization. Made before, during, and after its collapse by automated factories and other nations who couldn't be bothered switching production lines.\nType: Universal"
+      "Eng": "An outdated Ration tailored for individual daily consumption. A leftover from the glory days of USCM-backed colonization. Made before, during, and after its collapse by automated factories and other nations who couldn't be bothered switching production lines.\nType: Universal",
+      "Chs": "为个人日常消费量身定制的过时口粮。USCM支持的殖民统治辉煌时期的遗留物。在其崩溃之前、期间和之后，由自动化工厂和其他国家制造，这些国家不愿费心更换生产线。\n类型：通用"
     }
   }
 ]
