--- a/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_b_ration.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_b_ration.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Packaged foodstuffs for the soldier on the go. \n Type: Universal"
+      "Eng": "Packaged foodstuffs for the soldier on the go. \n Type: Universal",
+      "Chs": "为在旅途中的士兵准备的包装食品。\n类型：通用"
     }
   }
 ]
