--- a/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_c_ration.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_c_ration.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A pre-cooked ration pack. Typically issued where a cooking facility is present.\nType: Universal"
+      "Eng": "A pre-cooked ration pack. Typically issued where a cooking facility is present.\nType: Universal",
+      "Chs": "预先煮熟的口粮包。通常在有烹饪设施的地方发布。\n类型：通用"
     }
   }
 ]
