--- a/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_k_ration.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_k_ration.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A light individualized ration pack issued for specialized 'Assault' troops.\nType: Universal"
+      "Eng": "A light individualized ration pack issued for specialized 'Assault' troops.\nType: Universal",
+      "Chs": "为特种“突击”部队发放的轻型个性化口粮包。\n类型：通用"
     }
   }
 ]
