--- a/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_liquorcandies.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/UNITED_SYSTEMS/gic_us_liquorcandies.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A confection usually flavored and colored black with the extract of liquorice plant roots. Surprisingly filling but typically bitter, waxy, and utterly unenjoyable. As a potable pellet of personal punishment, you can sustain yourself with some of these purely because you're addicted to self-loathing. Note that red-liquorice is completely different in that it doesn't use liquorice at all, and is thus infinitely better.\n^green;Type: Sugar^reset;"
+      "Eng": "A confection usually flavored and colored black with the extract of liquorice plant roots. Surprisingly filling but typically bitter, waxy, and utterly unenjoyable. As a potable pellet of personal punishment, you can sustain yourself with some of these purely because you're addicted to self-loathing. Note that red-liquorice is completely different in that it doesn't use liquorice at all, and is thus infinitely better.\n^green;Type: Sugar^reset;",
+      "Chs": "一种通常用甘草植物根提取物调味并着色为黑色的糖果。令人惊讶的填充，但通常是苦涩的，蜡状的，完全不令人愉快。作为一种可饮用的个人惩罚，你可以用其中一些来维持自己，纯粹是因为你沉迷于自我厌恶。请注意，红甘草完全不同，因为它根本不使用甘草，因此效果更好。\n ^green;类型：糖^reset;"
     }
   }
 ]
