--- a/translations/patches/items/generic/produce/crystalplant.item.json
+++ b/translations/patches/items/generic/produce/crystalplant.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A plant formed of crystal. Magical!\n^green;Extracted into Crystal Broccoli^reset;"
+      "Eng": "A plant formed of crystal. Magical!\n^green;Extracted into Crystal Broccoli^reset;",
+      "Chs": "一种由水晶制成的植物。神奇的！\n ^green;提取到水晶西兰花^reset;"
     }
   }
 ]
