--- a/translations/patches/items/liquids/akkimariacid.liqitem.json
+++ b/translations/patches/items/liquids/akkimariacid.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A highly corrosive organic substance.\n^yellow;Centrifugable^reset;."
+      "Eng": "A highly corrosive organic substance.\n^yellow;Centrifugable^reset;.",
+      "Chs": "一种具有高度腐蚀性的有机物质。\n ^yellow;；可离心^reset;。"
     }
   }
 ]
