--- a/translations/patches/species/gic_realisticglitch.species.json
+++ b/translations/patches/species/gic_realisticglitch.species.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "[FORCIBLY ALTERED] Your connection to the Glitch Gestalt was broken traumatically by ''Free-Thinking'' Glitch, who in true irony, attempted to enslave you when furthering their malicious goal of destroying the Gestalt entirely. You would flee to the Protectorate, like so many before you, but it has struggled to grasp the dire implications of this development...\n\n  ^orange;Diet^reset;: Robotic/Omnivore\n\n^orange;Perks^reset;:\n  (GiC) Bleeding Immunity\n\n^red;Weaknesses^reset;:\n  Instead of (GiC) Bleeding, you become oiled. ^red;Vulnerable to being set on fire^reset; when in this state."
+      "Eng": "[FORCIBLY ALTERED] Your connection to the Glitch Gestalt was broken traumatically by ''Free-Thinking'' Glitch, who in true irony, attempted to enslave you when furthering their malicious goal of destroying the Gestalt entirely. You would flee to the Protectorate, like so many before you, but it has struggled to grasp the dire implications of this development...\n\n  ^orange;Diet^reset;: Robotic/Omnivore\n\n^orange;Perks^reset;:\n  (GiC) Bleeding Immunity\n\n^red;Weaknesses^reset;:\n  Instead of (GiC) Bleeding, you become oiled. ^red;Vulnerable to being set on fire^reset; when in this state.",
+      "Chs": "[强行改变]你与电子人格式塔的联系被“自由思考”电子人精神创伤地打破了，在真正具有讽刺意味的是，他试图奴役你，同时推进他们彻底摧毁格式塔的恶意目标。你会像你之前的许多人一样逃到大地守护团，但它很难理解这一事态发展的可怕影响。。。\n\n^orange;饮食^reset;：机械食物/杂食\n\n ^orange;天赋^reset;：\n（GiC）出血免疫\n ^red;弱点^reset;：\n你不再流血，而是变得油腻^red;易被点燃^reset;当处于这种状态时。"
     }
   }
 ]
