--- a/translations/patches/species/gic_realistichuman.species.json
+++ b/translations/patches/species/gic_realistichuman.species.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "[VOIDBORNE] Humans from disowned and disavowed colonies beyond Earth that were typically established in the USCM era. Acclimation to artificial habitats and generally different worlds begets enough differences in morphology to allow the Protectorate to avoid calling most of these people ''Human''. From their perspective, the Protectorate does this for unsavory reasons.\n\n  ^orange;Diet^reset;: Omnivore\n\n^orange;Perks^reset;:\n  Adrenaline:^green;Suppression Immunity^reset;\n  Gain more health from consuming GiC Food items.\n  +^green;25%^reset; accuracy and hit chance (GiC weapons only) when suppressed.\n  x^green;2^reset; bigger stomach."
+      "Eng": "[VOIDBORNE] Humans from disowned and disavowed colonies beyond Earth that were typically established in the USCM era. Acclimation to artificial habitats and generally different worlds begets enough differences in morphology to allow the Protectorate to avoid calling most of these people ''Human''. From their perspective, the Protectorate does this for unsavory reasons.\n\n  ^orange;Diet^reset;: Omnivore\n\n^orange;Perks^reset;:\n  Adrenaline:^green;Suppression Immunity^reset;\n  Gain more health from consuming GiC Food items.\n  +^green;25%^reset; accuracy and hit chance (GiC weapons only) when suppressed.\n  x^green;2^reset; bigger stomach.",
+      "Chs": "[虚空降临]来自地球以外通常在USCM时代建立的被否认和被否认的殖民地的人类。适应人工栖息地和通常不同的世界会产生足够的形态学差异，使大地守护团避免将这些人中的大多数称为“人类”。从他们的角度来看，大地守护团这样做是出于令人不快的原因。\n\n^orange;饮食^reset;：杂食性\n\n ^orange;天赋^reset;：\n肾上腺素：^green;抑制抗扰度^reset;\n通过食用GiC食品获得更多健康。\n+^green;25%^reset;当被压制时，精度和命中机会（仅GiC武器）。\nx ^green;2 ^reset;更大的胃。"
     }
   }
 ]
