--- a/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedmixedmeal.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/COLONY_STANDARD/gic_packagedmixedmeal.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mixed meal containing necessary dietary requirements. Apparently edible as is, because all components are already cooked before packaging. Warming it up might improve the taste, but who are you kidding: You'd eat mountains of boiled rice and peas if this wasn't already in your possession. Oh wait, this also has rice and peas in it.\nType: Universal"
+      "Eng": "Mixed meal containing necessary dietary requirements. Apparently edible as is, because all components are already cooked before packaging. Warming it up might improve the taste, but who are you kidding: You'd eat mountains of boiled rice and peas if this wasn't already in your possession. Oh wait, this also has rice and peas in it.\nType: Universal",
+      "Chs": "包含必要饮食要求的混合餐。显然可以直接食用，因为所有成分在包装前都已经煮熟了。加热它可能会改善味道，但你在开玩笑吗：如果你还没有这些，你会吃成山的煮米饭和豌豆。哦，等等，这里面还有米饭和豌豆。\n类型：通用"
     }
   }
 ]
