--- a/translations/patches/items/FOODS/CIVILIAN/gic_pearlpeanutsandwich.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_pearlpeanutsandwich.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Deceptively red hummus and peanut butter makes for an awkward mistake that still looks sexy enough to eat, so whatever.\n^green;Type: Herbivore^reset;"
+      "Eng": "Deceptively red hummus and peanut butter makes for an awkward mistake that still looks sexy enough to eat, so whatever.\n^green;Type: Herbivore^reset;",
+      "Chs": "看似红色的鹰嘴豆泥和花生酱会犯一个尴尬的错误，但看起来仍然足够性感，可以吃，所以不管怎样。\n ^green;类型：素食^reset;"
     }
   }
 ]
