--- a/translations/patches/items/FOODS/CIVILIAN/gic_vegetableburger.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_vegetableburger.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "More preservatives than organ storage. Kinda tastes like if somebody took your burger and replaced the meat with a bunch of tater tots or some other compressed salty, savory, vegetable product. In that sense, it's not bad actually.\n^green;Type: Herbivore^reset;"
+      "Eng": "More preservatives than organ storage. Kinda tastes like if somebody took your burger and replaced the meat with a bunch of tater tots or some other compressed salty, savory, vegetable product. In that sense, it's not bad actually.\n^green;Type: Herbivore^reset;",
+      "Chs": "防腐剂比器官储存更多。有点像有人拿走了你的汉堡，用一堆土豆条或其他压缩的咸味蔬菜产品代替了肉。从这个意义上说，其实还不错。\n ^green;类型：素食^reset;"
     }
   }
 ]
