--- a/translations/patches/items/FOODS/CIVILIAN/gic_xlbltsandwich.consumable.json
+++ b/translations/patches/items/FOODS/CIVILIAN/gic_xlbltsandwich.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A really big sandwich pack. Like, big. Holy shit this thing is huge. Massive even. And it probably has to be, because there's not much in there besides the obligatory ingredients.\n^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy"
+      "Eng": "A really big sandwich pack. Like, big. Holy shit this thing is huge. Massive even. And it probably has to be, because there's not much in there besides the obligatory ingredients.\n^orange;Type: Cooked Meat^reset; ^green;Veggie^reset; Dairy",
+      "Chs": "一个非常大的三明治包。像，大。天哪，这东西太大了。大规模甚至。这可能是必须的，因为除了必需的成分外，里面没有什么。\n ^orange;类型：熟肉^reset;^green;素食^reset;奶制品"
     }
   }
 ]
