--- a/translations/patches/items/FOODS/RATIONS/COLONY/gic_cgifr.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/COLONY/gic_cgifr.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "An outdated Ration tailored for the increased calorie expenditure of expeditionary troops fighting foreign wars. A leftover from the glory days of USCM-backed colonization. Made before, during, and after its collapse by automated factories and other nations who couldn't be bothered switching production lines.\nType: Universal"
+      "Eng": "An outdated Ration tailored for the increased calorie expenditure of expeditionary troops fighting foreign wars. A leftover from the glory days of USCM-backed colonization. Made before, during, and after its collapse by automated factories and other nations who couldn't be bothered switching production lines.\nType: Universal",
+      "Chs": "一种过时的口粮，专为参加对外战争的远征部队增加的卡路里支出而量身定制。USCM支持的殖民统治辉煌时期的遗留物。在其崩溃之前、期间和之后，由自动化工厂和其他国家制造，这些国家不愿费心更换生产线。\n类型：通用"
     }
   }
 ]
