--- a/translations/patches/items/FOODS/RATIONS/gic_cmre.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/gic_cmre.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A modern ration pack issued to most militaries. You would think that if you opened the box, there'd be more, smaller packages of individual foods. You'd be wrong: It's just a solid mass of brown, edible food-loaf. At least it comes with a water bottle to wash it down, and some corn to help it pass.\n Type: Universal"
+      "Eng": "A modern ration pack issued to most militaries. You would think that if you opened the box, there'd be more, smaller packages of individual foods. You'd be wrong: It's just a solid mass of brown, edible food-loaf. At least it comes with a water bottle to wash it down, and some corn to help it pass.\n Type: Universal",
+      "Chs": "向大多数军队发放的现代口粮包。你会认为，如果你打开盒子，会有更多更小的单个食物包装。你错了：它只是一大块棕色的可食用面包。至少它有一个水可以冲下去，还有一些玉米可以帮助它通过。\n类型：通用"
     }
   }
 ]
