--- a/translations/patches/items/FOODS/RATIONS/gic_energychocolatebar.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/gic_energychocolatebar.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "It looks like a chocolate bar. Smells like a chocolate bar. Tastes like a chocolate bar. But it's packed with energy and has the consistency of a brownie. A lot of dense nutrients were shoved into this. It's probably not a good idea to eat more than one a day. Bowel complications are a valid concern in your immediate future if you do...\n ^green;Type: Sugar Fruit^reset;"
+      "Eng": "It looks like a chocolate bar. Smells like a chocolate bar. Tastes like a chocolate bar. But it's packed with energy and has the consistency of a brownie. A lot of dense nutrients were shoved into this. It's probably not a good idea to eat more than one a day. Bowel complications are a valid concern in your immediate future if you do...\n ^green;Type: Sugar Fruit^reset;",
+      "Chs": "它看起来像一块巧克力棒。闻起来像巧克力棒。尝起来像巧克力棒。但它充满了能量，有布朗尼的一致性。大量的高密度营养物质被注入其中。每天吃一个以上可能不是个好主意。如果你这样做，肠道并发症在你不久的将来是一个合理的担忧…\n ^green;类型：糖果^reset;"
     }
   }
 ]
