--- a/translations/patches/items/FOODS/RATIONS/gic_energyfruitbar.consumable.json
+++ b/translations/patches/items/FOODS/RATIONS/gic_energyfruitbar.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "An energy-packed fruit-flavored bar. It is recommended that you eat no more than two per day. Should your fruitiness exceed a certain threshold and become a concern, a visit to the doctor is recommended; but this bar is realistically incapable of changing your sexual preferences.\n^green;Type: Fruit Dessert^reset;"
+      "Eng": "An energy-packed fruit-flavored bar. It is recommended that you eat no more than two per day. Should your fruitiness exceed a certain threshold and become a concern, a visit to the doctor is recommended; but this bar is realistically incapable of changing your sexual preferences.\n^green;Type: Fruit Dessert^reset;",
+      "Chs": "充满活力的水果味酒吧。建议你每天吃不超过两个。如果你的果味超过一定的阈值并成为一个问题，建议去看医生；但这家酒吧实际上无法改变你的性取向。\n ^green;类型：水果甜点^reset;"
     }
   }
 ]
