--- a/translations/patches/items/FOODS/SCAVENGER/gic_plantfibresalad.consumable.json
+++ b/translations/patches/items/FOODS/SCAVENGER/gic_plantfibresalad.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "It won't provide much but it will do if the situation is dire. \n^green;Type: Plant^reset"
+      "Eng": "It won't provide much but it will do if the situation is dire. \n^green;Type: Plant^reset",
+      "Chs": "它不会提供太多，但如果情况很糟糕，它会做的。\n ^green;类型：植物^reset;"
     }
   }
 ]
