--- a/translations/patches/items/generic/mechparts/body/mechbodyxsm_thetamech.item.json
+++ b/translations/patches/items/generic/mechparts/body/mechbodyxsm_thetamech.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "^cyan;Immune^reset;: Pressure, Acid, Extreme Heat/Cold/Radiation/Poison/Proto, Aether"
+      "Eng": "^cyan;Immune^reset;: Pressure, Acid, Extreme Heat/Cold/Radiation/Poison/Proto, Aether",
+      "Chs": "^cyan;免疫^reset;：压力、酸性、极热/低温/辐射/毒性/原体、以太"
     }
   }
 ]
