--- a/translations/patches/items/liquids/centensianliquid.liqitem.json
+++ b/translations/patches/items/liquids/centensianliquid.liqitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A strange, thick liquid that feels like it doesn't belong in this universe.\n^yellow;Centrifugable^reset;."
+      "Eng": "A strange, thick liquid that feels like it doesn't belong in this universe.\n^yellow;Centrifugable^reset;.",
+      "Chs": "一种奇怪的粘稠液体，感觉不属于这个宇宙。\n ^yellow;；可离心^reset;。"
     }
   }
 ]
