--- a/translations/patches/species/indix.species.json
+++ b/translations/patches/species/indix.species.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Living data constructs. Fragile in the physical realm, but nimble and dangerous.\n\n  ^orange;Diet^reset;: Does not eat.\n\n^orange;Perks^reset;:\n  +^green;15^reset;% Speed, Energy x^green;1.25^reset;\n  ^green;When 50% or higher in energy, gain minor health regen^reset;\n  Immune: Oxygen\n  ^green;Resist^reset;: +^green;20^reset;% Ice, Cosmic and Shadow\n\n^orange;Weapons^reset;:\n  Assault Rifle/Dagger/Whipblade: Damage x^green;1.1^reset;, +^green;2^reset;% Crit Chance\n  Machine Pistol: Damage x^green;1.1^reset;, +^green25^reset;% Crit Damage\n\n^red;Weaknesses^reset;:\n  ^red;Resist^reset;: -^red;40^reset;% Electric, -^red;25^reset;% Physical, -^red;20^reset;% Fire & Radiation"
+      "Eng": "Living data constructs. Fragile in the physical realm, but nimble and dangerous.\n\n  ^orange;Diet^reset;: Does not eat.\n\n^orange;Perks^reset;:\n  +^green;15^reset;% Speed, Energy x^green;1.25^reset;\n  ^green;When 50% or higher in energy, gain minor health regen^reset;\n  Immune: Oxygen\n  ^green;Resist^reset;: +^green;20^reset;% Ice, Cosmic and Shadow\n\n^orange;Weapons^reset;:\n  Assault Rifle/Dagger/Whipblade: Damage x^green;1.1^reset;, +^green;2^reset;% Crit Chance\n  Machine Pistol: Damage x^green;1.1^reset;, +^green25^reset;% Crit Damage\n\n^red;Weaknesses^reset;:\n  ^red;Resist^reset;: -^red;40^reset;% Electric, -^red;25^reset;% Physical, -^red;20^reset;% Fire & Radiation",
+      "Chs": "活数据构建。在物理领域很脆弱，但灵活而危险。\n\n^orange;饮食^reset;：不需要吃。\n\n^orange;天赋^reset;：\n+^green;15 ^reset;%速度，能量x ^green;1.25 ^reset;\n ^green;当能量达到50%或更高时，获得轻微健康回复^reset;\n免疫：氧气\n ^green;抗性^reset;：+^green;20 ^reset;%冰抗、宇宙射线抗性和暗影抗性\n\n^orange;武器^reset;：\n突击步枪/匕首/鞭刀：伤害x ^green;1.1 ^reset;+^green;2 ^reset;%暴击率\n机械手枪：伤害x ^green;1.1 ^reset;+^green;25 ^reset;%暴击伤害\n\n^red;弱点^reset;：\n ^red;抗性^reset;：-^red;40 ^reset;%电抗，-^red;25 ^reset;%物理抗性，-^red;20 ^reset;%火抗与辐射抗性"
     }
   }
 ]
