--- a/translations/patches/species/vashknaarenbiped.species.json
+++ b/translations/patches/species/vashknaarenbiped.species.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Vash'Knaaren are composed of a single crystal protected by organic metal plates and stony flesh.\n\n  ^orange;Diet^reset;: Omnivore\n\n^orange;Perks^reset;:\n  ^green;Resist^reset;: +^green;20^reset;% Physical, Shadow, +^green;10^reset;% Radioactive\n  ^cyan;Immune^reset;: Darkness, Poison\n  ^green;Charisma^reset; +^green;10^reset;%\n\n^orange;Environment^reset;:\n  ^green;Dark^reset;: Health, Defense x^green;1.15^reset;\n\n^orange;Weapons^reset;:\n  Bioweapon Mastery: +^green;36^reset;%\n\n^red;Weaknesses^reset;:\n  ^red;Resist^reset;: -^red;15^reset;% Elec, -^red;10^reset;% Poison, Fire, Ice,\n  ^red;Hunger Rate^reset; +^red;8^reset;%"
+      "Eng": "Vash'Knaaren are composed of a single crystal protected by organic metal plates and stony flesh.\n\n  ^orange;Diet^reset;: Omnivore\n\n^orange;Perks^reset;:\n  ^green;Resist^reset;: +^green;20^reset;% Physical, Shadow, +^green;10^reset;% Radioactive\n  ^cyan;Immune^reset;: Darkness, Poison\n  ^green;Charisma^reset; +^green;10^reset;%\n\n^orange;Environment^reset;:\n  ^green;Dark^reset;: Health, Defense x^green;1.15^reset;\n\n^orange;Weapons^reset;:\n  Bioweapon Mastery: +^green;36^reset;%\n\n^red;Weaknesses^reset;:\n  ^red;Resist^reset;: -^red;15^reset;% Elec, -^red;10^reset;% Poison, Fire, Ice,\n  ^red;Hunger Rate^reset; +^red;8^reset;%",
+      "Chs": "梵西科纳伦是由一块有机金属板和石头肉包裹的水晶组成的东西。\n\n^orange;饮食^reset;：实体\n\n^orange;天赋^reset;：\n ^green;抗性^reset;：+^green;20 ^reset;%物理、放射性、暗影\n^cyan;免疫^reset;：黑暗、毒液、原毒、极端辐射\n^cyan;酸蚀科技^reset;\n\n^orange;环境^reset;：\n ^green;极端辐射^reset;：^cyan;最小再生速率^reset;\n ^green;黑暗^reset;：生命，防御x ^green;1.15 ^reset;\n\n^orange;武器^reset;：\n生物武器精通：+^green;40 ^reset;%\n\n^red;弱点^reset;：\n ^red;抗性^reset;：-^red;30 ^reset;%火抗，冰抗，-^red;15 ^reset;%电气，-^red;10 ^reset;%毒物\n ^red;饥饿流失^reset;+^red;8 ^reset;%\n ^red;魅力^reset;-^red;40 ^reset;%"
     }
   }
 ]
