--- a/translations/texts/codex/legacy_codex/fuascendant1.codex.json
+++ b/translations/texts/codex/legacy_codex/fuascendant1.codex.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ascendant's Tale 1"
+      "Eng": "Ascendant's Tale 1",
+      "Chs": "上升者的故事1"
     }
   },
   {
