--- a/translations/texts/codex/legacy_codex/fuascendant10.codex.json
+++ b/translations/texts/codex/legacy_codex/fuascendant10.codex.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ascendant's Tale 10"
+      "Eng": "Ascendant's Tale 10",
+      "Chs": "上升者的故事10"
     }
   },
   {
