材料补充翻译

--- a/translations/texts/materials/shared_coppersloppedpanel.mat.json
+++ b/translations/texts/materials/shared_coppersloppedpanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Panels made out of pure copper. Now you just need a clockwork angel!"
+      "Eng": "Panels made out of pure copper. Now you just need a clockwork angel!",
+      "Chs": "由纯铜制成的面板。现在你只需要一个发条天使！"
     }
   },
   {
@@ -24,7 +25,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sloped Copper Panel"
+      "Eng": "Sloped Copper Panel",
+      "Chs": "倾斜铜制面板"
     }
   }
 ]
