--- a/translations/texts/materials/shared_silversloppedpanel.mat.json
+++ b/translations/texts/materials/shared_silversloppedpanel.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Panels made out of pure silver. Space vampires beware!"
+      "Eng": "Panels made out of pure silver. Space vampires beware!",
+      "Chs": "纯银制成的面板。太空吸血鬼小心！"
     }
   },
   {
@@ -24,7 +25,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sloped Silver Panel"
+      "Eng": "Sloped Silver Panel",
+      "Chs": "倾斜银制面板"
     }
   }
 ]
