怪物名称补充翻译

--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnakesegment.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnakesegment.monstertype.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A segment of an aqua sphere snake."
+      "Eng": "A segment of an aqua sphere snake.",
+      "Chs": "水球蛇的一部分。"
     }
   }
 ]
