--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/shared_.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/shared_.monstertype.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A snake-like construct composed of aqua distortion spheres."
+      "Eng": "A snake-like construct composed of aqua distortion spheres.",
+      "Chs": "由水扭曲球体组成的蛇形构造。"
     }
   }
 ]
