--- a/translations/texts/monsters/space/fuheavydrone/fuheavydrone.monstertype.json
+++ b/translations/texts/monsters/space/fuheavydrone/fuheavydrone.monstertype.json
@@ -19,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Precursor War Drone"
+      "Eng": "Precursor War Drone",
+      "Chs": "先驱无人机"
     }
   }
 ]
