--- a/translations/texts/monsters/space/futrifangle/futrifangle.monstertype.json
+++ b/translations/texts/monsters/space/futrifangle/futrifangle.monstertype.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Precursor Trifangle"
+      "Eng": "Precursor Trifangle",
+      "Chs": "先驱三角器"
     }
   },
   {
@@ -18,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Six times better than a semifangle."
+      "Eng": "Six times better than a semifangle.",
+      "Chs": "比半角球好六倍。"
     }
   }
 ]
