--- a/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnake.monstertype.json
+++ b/translations/texts/monsters/segmented/distortionsnakes/aquasnake/aquasnake.monstertype.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The head of an aqua sphere snake."
+      "Eng": "The head of an aqua sphere snake.",
+      "Chs": "水球蛇的头部。"
     }
   }
 ]
