--- a/translations/texts/monsters/space/fuchiropterror/fuchiropterror.monstertype.json
+++ b/translations/texts/monsters/space/fuchiropterror/fuchiropterror.monstertype.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "It's a chiropterror!"
+      "Eng": "It's a chiropterror!",
+      "Chs": "这是一只翼手蝠！"
     }
   },
   {
@@ -18,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Precursor Chiropterror"
+      "Eng": "Precursor Chiropterror",
+      "Chs": "先驱翼手蝠"
     }
   }
 ]
