--- a/translations/texts/monsters/space/futwigun/futwigunpet.monstertype.json
+++ b/translations/texts/monsters/space/futwigun/futwigunpet.monstertype.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Precursor Twigun"
+      "Eng": "Precursor Twigun",
+      "Chs": "先驱双子枪"
     }
   }
 ]
